# luxury-radar

./: README.md  pyproject.toml
crawler/: create_tables.py  db.py  models.py  save_to_db.py  test_save.py
db/: schema.sql
infra/docker/: docker-compose.yaml
