[project]
name = "luxury-radar"
version = "0.1.0"
description = "Luxury product crawler with API and DB sync"
authors = [
    {name = "rakjija",email = "minjai100111@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "sqlalchemy (>=2.0.40,<3.0.0)",
    "pymysql (>=1.1.1,<2.0.0)",
    "cryptography (>=44.0.2,<45.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
